--- a/package.json
+++ b/package.json
@@ -15,33 +15,34 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.14.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.37",
-    "expo-constants": "~17.0.7",
-    "expo-font": "~13.0.4",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "firebase": "^10.12.2",
+    "latest": "^0.2.0",
     "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendar-picker": "^8.0.4",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
