--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-    "buildCommand": "expo export -p web",
+    "buildCommand": "npm install --legacy-peer-deps && expo export -p web",
     "outputDirectory": "dist",
     "devCommand": "expo",
     "cleanUrls": true,
     "framework": null,
+    "installCommand": "npm install --legacy-peer-deps",
     "rewrites": [
       {
         "source": "/:path*",
