Configure Expo project for Vercel deployment
- Update dependencies to compatible versions (React 18.3.1, React Native 0.76.7)
- Configure vercel.json for proper Expo web export
- Add build scripts for web deployment
- Create metro.config.js for proper bundling
- Update babel.config.js with expo-router support
- Enhance app.json web configuration
- Move API keys to environment variables for security
- Add legacy peer deps flag to resolve dependency conflicts

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
 {
-    "buildCommand": "npm install --legacy-peer-deps && expo export -p web",
+    "buildCommand": "npx expo export --platform web",
     "outputDirectory": "dist",
-    "devCommand": "expo",
-    "cleanUrls": true,
-    "framework": null,
     "installCommand": "npm install --legacy-peer-deps",
+    "framework": null,
     "rewrites": [
       {
-        "source": "/:path*",
+        "source": "/(.*)",
         "destination": "/"
       }
     ]
