--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "TripEasy",
     "slug": "ai-travel-planner",
     "version": "1.0.0",
+    "sdkVersion": "52.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/play_store_512.png",
     "scheme": "myapp",
@@ -25,14 +26,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png",
-      "build": {
-        "babel": {
-          "include": [
-            "@expo/vector-icons"
-          ]
-        }
-      }
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
