--- a/package.json
+++ b/package.json
@@ -22,39 +22,38 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
-    "expo": "^53.0.0",
-    "expo-constants": "~17.1.6",
-    "expo-font": "~13.3.1",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo": "^52.0.0",
+    "expo-constants": "~16.0.0",
+    "expo-font": "~12.0.0",
+    "expo-linear-gradient": "~13.0.0",
+    "expo-linking": "~6.3.0",
+    "expo-router": "~4.0.0",
+    "expo-splash-screen": "~0.29.0",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.0",
+    "expo-web-browser": "~13.0.0",
     "firebase": "^10.12.2",
     "latest": "^0.2.0",
     "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.76.7",
     "react-native-calendar-picker": "^8.0.4",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.20.0",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-web": "^0.20.0",
-    "@expo/webpack-config": "^19.0.1"
+    "react-native-reanimated": "~3.16.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.5",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~52.0.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
