--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
-    "buildCommand": "npx expo export --platform web",
-    "outputDirectory": "dist",
-    "installCommand": "npm install --legacy-peer-deps",
-    "framework": null,
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
-  }
-  
+  "buildCommand": "expo export -p web",
+  "outputDirectory": "dist",
+  "devCommand": "expo",
+  "cleanUrls": true,
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "destination": "/"
+    }
+  ]
+}
+
